--- a/deploy/cd.yml
+++ b/deploy/cd.yml
@@ -1,12 +1,12 @@
 - hosts: kubernetes
-  user: root
+  user: ubuntu
 
   tasks:
     - name: deploy sampleapp on kubernetes cluster
-      command: kubectl apply -f myapp-deployment.yml --namespace= "{{ ns }}"
+      command: kubectl apply -f deployment.yml --namespace="{{ ns }}"
 
     - name: create service for sampleapp
-      command: kubectl apply -f myapp-service.yml --namespace= "{{ ns }}"
+      command: kubectl apply -f service.yml --namespace="{{ ns }}"
 
     - name: update deployment with new pods if image updated in docker hub
-      command: kubectl rollout restart deployment.apps/addressbook --namespace= "{{ ns }}"
+      command: kubectl rollout restart deployment.apps/addressbook --namespace="{{ ns }}"
