--- a/deploy/cd.yml
+++ b/deploy/cd.yml
@@ -3,10 +3,10 @@
 
   tasks:
     - name: deploy sampleapp on kubernetes cluster
-      command: kubectl apply -f deployment.yml --namespace="{{ ns }}"
+      command: kubectl apply -f /home/ubuntu/manifests/deployment.yml --namespace="{{ ns }}"
 
     - name: create service for sampleapp
-      command: kubectl apply -f service.yml --namespace="{{ ns }}"
+      command: kubectl apply -f /home/ubuntu/manifests/service.yml --namespace="{{ ns }}"
 
     - name: update deployment with new pods if image updated in docker hub
       command: kubectl rollout restart deployment.apps/addressbook --namespace="{{ ns }}"
